<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_local"
        android:icon="@drawable/ic_sd_card_black_24dp"
        android:title="@string/title_local" />

    <item
        android:id="@+id/navigation_online"
        android:icon="@drawable/ic_language_black_24dp"
        android:title="@string/title_online" />

    <item
        android:id="@+id/navigation_playing"
        android:icon="@drawable/ic_music_note_black_24dp"
        android:title="@string/title_playing" />

    <item
        android:id="@+id/navigation_lyrics"
        android:icon="@drawable/ic_short_text_black_24dp"
        android:title="@string/title_lyrics" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>
