<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activ_local"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="g.musical.Local">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/about_local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_local" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/mini_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/menu"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:max="100"
                android:progress="30"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_previous"
                android:textSize="@dimen/bottom_bar_text" />

            <Button
                android:id="@+id/button_play_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_play"
                android:textSize="@dimen/bottom_bar_text" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_next"
                android:textSize="@dimen/bottom_bar_text" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/title_local"
            android:textSize="@dimen/bottom_bar_text" />

        <Button
            android:id="@+id/button_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_online"
            android:textSize="@dimen/bottom_bar_text" />

        <Button
            android:id="@+id/button_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_playing"
            android:textSize="@dimen/bottom_bar_text" />

        <Button
            android:id="@+id/button_lyrics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_lyrics"
            android:textSize="@dimen/bottom_bar_text" />

        <Button
            android:id="@+id/button_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_notifications"
            android:textSize="@dimen/bottom_bar_text" />
    </LinearLayout>

</RelativeLayout>

